<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.example.yoha.RegisterActivity">
  <include layout="@layout/custom_toolbar" />

  <TextView
    android:id="@+id/iconUser"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="190dp"
    android:layout_marginStart="30dp"
    android:text="@string/username"
    android:textSize="18sp"/>

  <EditText
    android:id="@+id/editUser"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="180dp"
    android:layout_marginStart="150dp"
    android:ems="10"
    android:gravity="center"
    android:hint="Your username"
    android:inputType="textPersonName"
    android:textSize="15sp"/>

  <TextView
    android:id="@+id/iconPassword"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="230dp"
    android:layout_marginStart="30dp"
    android:text="@string/password"
    android:textSize="18sp"/>

  <EditText
    android:id="@+id/editPassword"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="220dp"
    android:layout_marginStart="150dp"
    android:ems="10"
    android:gravity="center"
    android:hint="Your password"
    android:inputType="textPassword"
    android:text="@string/password"
    android:textSize="15sp"/>


  <TextView
    android:id="@+id/iconRepassword"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="270dp"
    android:layout_marginStart="30dp"
    android:hint="Password again"
    android:text="@string/repassword"

    android:textSize="18sp"/>

  <EditText
    android:id="@+id/editRepassword"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="260dp"
    android:layout_marginStart="150dp"
    android:ems="10"
    android:gravity="center"
    android:inputType="textPassword"
    android:textSize="15sp"/>

  <Button
    android:id="@+id/registerBnt"

    android:layout_width="250dp"

    android:layout_height="wrap_content"
    android:layout_marginBottom="200dp"
    android:layout_marginStart="80dp"

    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"

    android:layout_centerVertical="true"
    android:text="@string/register"/>

</RelativeLayout>